更换java8脚本